# AppleUnintelligence

./: .env  CMakeLists.txt  README.md  avr.cpp  avr.h  icloud.py  main.cpp  main.py
macobuild/: CMakeCache.txt  EBOOT.PBP  Makefile  PARAM.SFO  cmake_install.cmake
src/: avr.cpp  main.cpp
